idf_component_register(	SRCS "AnalogIn.cpp" 
							"EventFlags.cpp"
							"I2C.cpp"
							"InterruptIn.cpp"
							"mbed_isr.cpp"
							"mbed_wait.cpp"
							"Mutex.cpp"
							"PwmOut.cpp"
							"RawSerial.cpp"
							"RtosTimer.cpp"
							"Semaphore.cpp"
							"Serial.cpp"
							"SPI.cpp"
							"Thread.cpp"
							"Ticker.cpp"
							"Ticker_HAL.cpp"
							"Timer.cpp"
						INCLUDE_DIRS ".")